Add an alias for apostrophe.

--- a/_layouts/mathpost.html
+++ b/_layouts/mathpost.html
@@ -26,4 +26,4 @@ layout: post
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.min.js">
 </script>
 
-{{ content }}
+{% include text text=content %}
