--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,11 +1,4 @@
-<html>
-
 {{ partial "head.html" . }}
-<body>
-
 {{ partial "banner.html" . }}
 <pre>Page not found</pre>
-
-</body>
-
-</html>
+{{ partial "tail.html" . }}
