--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,7 @@
-<html>
-
 {{ partial "head.html" . }}
-<body>
-
 {{ partial "banner.html" . }}
 {{ partial "content.html" . }}
 <h1>Blogs</h1>
 
 {{ partial "list-pages-by-section.html" "blogs" }}
-</body>
-
-</html>
+{{ partial "tail.html" . }}
